Added Toggle feature

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>World Telecom</title>
 </head>
+
 <body>
     <div class="navbar">
         <div class="container">
@@ -22,8 +24,8 @@
                     <li><a href="#">Korporativ satışlar</a></li>
                     <li><a href="#">Mağazalarımız</a></li>
                     <li>
-                        <a href="#" id="lang-az">AZ</a>
-                        <a href="./indexru.html" id="">RU</a>
+                        <a href="#" id="lang-az" class="active">AZ</a>
+                        <a href="./indexru.html" id="lang-ru">RU</a>
                     </li>
                 </ul>
             </div>
@@ -42,9 +44,12 @@
             </div>
             <div class="header-icon">
                 <ul>
-                    <li><a href="#"><i class="bi bi-heart"></i><span>Sevimlilərim</span></a></li>
-                    <li><a href="#"><i class="bi bi-bag-dash"></i><span>Səbətim</span></a></li>
-                    <li><a href="#"><i class="bi bi-person"></i><span>Hesabım</span></a></li>
+                    <li><a href="#"><i class="bi bi-heart icon-bs"></i><i class="bi bi-heart-fill icon-bs-fill"
+                                style="display: none;"></i><span>Sevimlilərim</span></a></li>
+                    <li><a href="#"><i class="bi bi-bag-dash icon-bs"></i><i class="bi bi-bag-dash-fill icon-bs-fill"
+                                style="display: none;"></i><span>Səbətim</span></a></li>
+                    <li><a href="#"><i class="bi bi-person icon-bs"></i><i class="bi bi-person-fill icon-bs-fill"
+                                style="display: none;"></i><span>Hesabım</span></a></li>
                 </ul>
             </div>
         </div>
@@ -52,4 +57,5 @@
 
     <script src="./js/main.js"></script>
 </body>
+
 </html>
